--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="overflow-x-hidden scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog-Tech</title>
+    <meta
+      name="description"
+      content="Ignite your passion for writing and share your voice with the world through our intuitive blogging platform. Unleash your creativity and join a community of fellow bloggers today."
+    />
+    <title>Blog Tech</title>
   </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
