--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="overflow-x-hidden scroll-smooth">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -10,7 +10,7 @@
     />
     <title>Blog Tech</title>
   </head>
-  <body class="overflow-x-hidden">
+  <body class="overflow-x-hidden dark:bg-black">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
