--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,14 @@
       content="Ignite your passion for writing and share your voice with the world through our intuitive blogging platform. Unleash your creativity and join a community of fellow bloggers today."
     />
     <title>Blog Tech</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EXJGFGW36M"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-EXJGFGW36M');
+    </script>
   </head>
   <body class="overflow-x-hidden dark:bg-black">
     <div id="root"></div>
