--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Ignite your passion for writing and share your voice with the world through our intuitive blogging platform. Unleash your creativity and join a community of fellow bloggers today."
     />
+    <meta name="google-adsense-account" content="ca-pub-7436170435436020">
     <title>Blog Tech</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EXJGFGW36M"></script>
     <script>
