--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,8 @@
 
       gtag('config', 'G-EXJGFGW36M');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7436170435436020"
+      crossorigin="anonymous"></script>
   </head>
   <body class="overflow-x-hidden dark:bg-black">
     <div id="root"></div>
